--- a/#source/scss/_content.scss
+++ b/#source/scss/_content.scss
@@ -135,6 +135,7 @@
             font-weight: 500;
             line-height: 21px;
             color: #2D2D2D;
+            margin: 0;
         }
     }
 
@@ -221,53 +222,6 @@
         flex: 1;
         display: flex;
         align-items: center;
-
-        a{
-            display: inline-flex;
-
-            width: 140px;
-            justify-content: center;
-            align-items: center;
-            outline: none;
-            cursor: pointer;
-            border-radius: 4px;
-            background-color: #FF4A64;
-            border: none;
-            padding: 12px 20px;
-            height: 40px;
-            transition: background-color 0.3s;
-
-            span{
-                font-weight: 600;
-                color: #ffffff;
-                font-size: 14px;
-                line-height: 3.2;
-            }
-
-            &:hover{
-                background-color: #BC284B;
-
-                .chartItem__arrowSvg{
-                    opacity: 1;
-                    margin-inline-start: 8px;
-                    
-                }
-            }
-        }
-    }
-
-    &__arrowSvg{
-        display: flex;
-        position: relative;
-        opacity: 0;
-        margin-inline-start: -12px;
-        transition: opacity ease 0.3s,margin ease 0.3s;
-
-        svg{
-            font-weight: 400;
-            font-size: 12px;
-            color: #ffffff;
-        }
     }
 }
 .rating_moreInfo {
@@ -337,6 +291,17 @@
             font-weight: 400;
             color: #39393a;
         }
+
+        h3{
+            font-family: Roboto;
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 24px;
+            width: 167px;
+            letter-spacing: 1px;
+            color: #39393a;
+            margin: 0;
+        }
     }
 
     &__count {
@@ -354,6 +319,11 @@
         display: flex;
         flex-direction: column;
         row-gap: 28px;
+
+        h4{
+            font-family: Roboto;
+            margin: 0;
+        }
     }
 
     &__mustRead {
@@ -394,6 +364,8 @@
         line-height: 22px;
         margin-bottom: 16px;
         color: #2D2D2D;
+
+        font-family: Roboto;
     }
 
     &__advantages {
@@ -440,6 +412,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 28px;
+    margin: 0;
 
     &__body {
         width: 100%;
@@ -534,7 +507,7 @@
     display: block;
     padding: 40px 0 0;
     width: 100%;
-    margin: 0 10px 0 0;
+    margin: 0 10px 60px 0;
     position: relative;
 
     &__topTen {
@@ -573,6 +546,10 @@
             font-weight: 700;
             color: #2d2d2d;
             margin: 0 0 20px 0;
+
+            text-transform: none;
+            letter-spacing: 0;
+            font-family: Roboto;
         }
 
         h3{
