--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -2,7 +2,6 @@
 @import '_topproducts.scss';
 @import '_content.scss';
 
-
 .wrapper {
     min-height: 100%;
     overflow: hidden;
@@ -293,7 +292,7 @@ body {
         color: white;
         font-size: 14px;
         background: rgb(21, 100, 191);
-        padding: initial;
+        padding-top: 2px;
 
         box-sizing: border-box;
         margin: 0px;
@@ -334,6 +333,65 @@ body {
     }
 }
 
+.visitButton{
+    a{
+        display: inline-flex;
+
+        width: 140px;
+        justify-content: center;
+        align-items: center;
+        outline: none;
+        cursor: pointer;
+        border-radius: 4px;
+        background-color: #FF4A64;
+        border: none;
+        padding: 12px 20px;
+        height: 40px;
+        transition: background-color 0.3s;
+
+        span{
+            font-weight: 600;
+            color: #ffffff;
+            font-size: 14px;
+            line-height: 3.2;
+        }
+
+        &:hover{
+            background-color: #BC284B;
+
+            .visitButton__arrowSvg{
+                opacity: 1;
+                margin-inline-start: 8px;
+            }
+        }
+    }
+
+    &__arrowSvg{
+        display: flex;
+        position: relative;
+        opacity: 0;
+        margin-inline-start: -12px;
+        transition: opacity ease 0.3s,margin ease 0.3s;
+
+        svg{
+            font-weight: 400;
+            font-size: 12px;
+            color: #ffffff;
+        }
+    }
+}
+
+.wrapLine{
+    width: 100%;
+    background: linear-gradient( 90deg, rgba(226, 226, 226, 0.25) 0%, rgba(226, 226, 226, 0.8) 50%, rgba(226, 226, 226, 0.25) 100% );
+    height: 1px;
+
+    &__marginBottom{
+        margin-bottom: 52px;
+        background: rgba(226, 226, 226, 1);
+    }
+}
+
 @keyframes scoreCardAnim {
     0% {
         transform: translateY(10px);
@@ -349,3 +407,4 @@ body {
         opacity: 1;
     }
 }
+
