--- a/#source/scss/_content.scss
+++ b/#source/scss/_content.scss
@@ -32,6 +32,9 @@
 
     &__questions {
     }
+
+    &__miniReviews {
+    }
 }
 
 .chart {
@@ -569,6 +572,10 @@
             word-wrap: break-word;
             font-weight: 400;
             color: #2d2d2d;
+
+            &:last-child{
+                margin: 0 0 0 0;
+            }
         }
 
         strong{
@@ -601,5 +608,337 @@
         left: 0;
         right: -5px;
         border-top: 1px solid #d5d5d5;
+    }
+}
+
+
+
+.miniReviews {
+    max-width: 835px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    &__title {
+        width: 100%;
+        max-width: 635px;
+        margin: 0 0 40px 0;
+        font-size: 30px;
+        line-height: 1.14;
+        font-weight: bold;
+        color: #2d2d2d;
+
+        &::after{
+            content: ' ';
+            margin-top: 40px;
+            display: flex;
+            width: 60px;
+            border-bottom: 1px solid #d5d5d5;
+        }
+    }
+
+    &__list {
+        
+    }
+}
+.miniReview {
+    max-width: 635px;
+    &__body {
+        display: flex;
+        flex-direction: column;
+
+        &::after{
+            content: ' ';
+            margin-top: 50px;
+            display: flex;
+            width: 100%;
+            border-bottom: 1px solid #d5d5d5;
+        }
+
+        &:not(:last-child){
+            margin-bottom: 50px;
+        }
+    }
+
+    &__header {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-bottom: 40px;
+    }
+
+    &__top {
+        display: flex;
+        width: 100%;
+        margin-bottom: 30px;
+        align-items: center;
+
+        a{
+            align-self: center;
+            border-right: 1px solid #e2e2e2;
+            height: 50px;
+            padding-right: 16px;
+            margin-right: 16px;
+
+            img{
+                max-width: 150px;
+                max-height: 60px;
+            }
+        }
+
+        h2{
+            line-height: 28px;
+            font-family: Roboto;
+            font-size: 16px;
+            font-weight: 700;
+            color: #2d2d2d;
+        }
+    }
+
+    &__counter {
+        height: 50px;
+        border-inline-end: 1px solid #e2e2e2;
+        padding-inline-end: 16px;
+        margin-inline-end: 16px;
+        color: #D5D5D5;
+        font-size: 60px;
+        font-weight: 700;
+    }
+
+    &__promotion {
+        display: flex;
+        align-items: center;
+    }
+
+    &__promLinks {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+        span{
+            font-size: 16px;
+            line-height: 1.38;
+            font-weight: normal;
+            color: #797979;
+        }
+
+        a{
+            display: flex;
+            text-decoration: none;
+            cursor: pointer;
+            font-size: 16px;
+            line-height: 1.69;
+            font-weight: 600;
+            color: #1789d5;
+            align-items: center;
+            column-gap: 7px;
+
+            transition: color 0.3s ease;
+
+            &:hover{
+                color: #1564bf;
+            }
+        }
+    }
+
+    &__readReview {
+    }
+
+    &__visit {
+    }
+
+    &__info {
+        margin-bottom: 40px;
+    }
+
+    &__attributes {
+        display: flex;
+        flex-direction: column;
+        row-gap: 15px;
+    }
+
+    &__attribute {
+        list-style-type: none;
+        display: flex;
+        column-gap: 8px;
+        align-items: center;
+        width: 100%;
+        font-size: 16px;
+        line-height: 1.69;
+        font-weight: normal;
+        color: #2d2d2d;
+
+        p{
+            font-size: 16px;
+            line-height: 1.69;
+            font-weight: normal;
+            color: #2d2d2d;
+
+            strong{
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 1.69;
+                color: #2d2d2d;
+            }
+        }
+    }
+
+    &__describe {
+        margin-bottom: 40px;
+    }
+
+    &__text {
+        p{
+            margin: 0 0 20px 0;
+            font-size: 16px;
+            line-height: 27px;
+            word-wrap: break-word;
+            font-weight: 400;
+            color: #2d2d2d;
+
+            strong{
+                font-weight: 600;
+            }
+
+            &:last-child{
+                margin: 0 0 0 0;
+            }
+        }
+    }
+
+    &__prosAndCons {
+        display: flex;
+        column-gap: 35px;
+        margin-bottom: 40px;
+    }
+
+    &__pros {
+    }
+
+    &__cons {
+    }
+
+    &__bottom {
+        background-color: #f5f5f5;
+        display: flex;
+        padding: 10px;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    &__logoBlock {
+        display: flex;
+        align-items: center;
+        flex: 1 0 auto;
+        column-gap: 25px;
+
+        span{
+            font-size: 16px;
+            line-height: 30px;
+            font-weight: 700;
+            color: #39393a;
+        }
+    }
+
+    &__logoImg {
+        background-color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 45px;
+        height: 45px;
+
+        img{
+            width: 25px;
+            height: 25px;
+            object-fit: contain;
+        }
+    }
+}
+
+.pros {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    h4{
+        font-size: 16px;
+        line-height: 1.69;
+        font-weight: 600;
+        color: #2d2d2d;
+        margin-bottom: 16px;
+
+        &:after{
+            content: ' ';
+            margin-top: 14px;
+            display: flex;
+            width: 100%;
+            border-bottom: 1px solid #d5d5d5;
+        }
+    }
+
+    &__block {
+        display: flex;
+        flex-direction: column;
+        row-gap: 15px;
+    }
+
+    &__item {
+        display: flex;
+        align-items: center;
+        column-gap: 12px;
+
+        p{
+            font-size: 14px;
+            line-height: 1.36;
+            font-weight: normal;
+            color: #2d2d2d;
+            flex-shrink: 2;
+        }
+    }
+}
+.cons {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    h4{
+        font-size: 16px;
+        line-height: 1.69;
+        font-weight: 600;
+        color: #2d2d2d;
+        margin-bottom: 16px;
+
+        &:after{
+            content: ' ';
+            margin-top: 14px;
+            display: flex;
+            width: 100%;
+            border-bottom: 1px solid #d5d5d5;
+        }
+    }
+
+    &__block {
+        display: flex;
+        flex-direction: column;
+        row-gap: 15px;
+    }
+
+    &__item {
+        display: flex;
+        align-items: center;
+        column-gap: 12px;
+
+        p{
+            font-size: 14px;
+            line-height: 1.36;
+            font-weight: normal;
+            color: #2d2d2d;
+            flex-shrink: 2;
+        }
+
+        svg{
+            transform: rotate(180deg);
+        }
     }
 }
