--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'nullstyle.scss';
 @import '_topproducts.scss';
 @import '_content.scss';
+@import '_categories.scss';
 
 .wrapper {
     min-height: 100%;
