--- a/css/style.css
+++ b/css/style.css
@@ -1305,6 +1305,146 @@ p {
           transform: rotate(180deg);
 }
 
+.footer {
+  width: 100%;
+  margin-top: 70px;
+}
+.categories {
+  background-color: #f5f5f5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+.categories__body {
+  background-color: #f5f5f5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  max-width: 970px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 0 15px;
+}
+.categories__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 30px;
+}
+.categories__header h3 {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 600;
+  color: #2d2d2d;
+  font-family: Roboto;
+}
+.categories__header a {
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 19px;
+  font-weight: 600;
+  color: #1789d5;
+  -webkit-transition: color 0.3s linear;
+  transition: color 0.3s linear;
+}
+.categories__header a:hover {
+  color: #1564bf;
+}
+.categories__row {
+  border-bottom: 1px solid #d5d5d5;
+  height: 118px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+.categories__row:not(:last-child) {
+  border-top: 1px solid #d5d5d5;
+}
+.categories__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: white;
+}
+.categories__category {
+  border-left: 1px solid #d5d5d5;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 20%;
+  height: 118px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transition: background-color 0.3s linear;
+  transition: background-color 0.3s linear;
+}
+.categories__category a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+}
+.categories__category a img {
+  margin-top: 16px;
+  max-width: 35px;
+  max-height: 35px;
+  width: auto;
+  height: auto;
+}
+.categories__category a span {
+  margin-bottom: 14px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-decoration: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-transform: capitalize;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 400;
+  color: #2d2d2d;
+}
+.categories__category:hover {
+  background-color: rgba(255, 74, 100, 0.2);
+}
+.categories__category:last-child {
+  border-right: 1px solid #d5d5d5;
+}
+
 .wrapper {
   min-height: 100%;
   overflow: hidden;
